--- a/hermes-server/pom.xml
+++ b/hermes-server/pom.xml
@@ -15,7 +15,19 @@
 
 	<url>https://github.com/amiraElmergawy/chat-app</url>
 
-	<dependencies></dependencies>
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.28</version>
+		</dependency>
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>5.0.1</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
