--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ nb-configuration.xml
 ##############################
 .DS_Store
 **/.DS_Store
+##############################
+###### Hikaricp configs
+hikaricp.properties
