--- a/hermes-client/pom.xml
+++ b/hermes-client/pom.xml
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-web</artifactId>
-			<version>17.0.2</version>
+			<version>18-ea+4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
