--- a/hermes-server/pom.xml
+++ b/hermes-server/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>hermes-common</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-swing</artifactId>
+    <version>17.0.2</version>
+</dependency>
+
     </dependencies>
 
     <build>
